fix: update CORS configuration to allow localhost (port 80) and add OPTIONS method